base/src/test/resources/failure/tyck/issues/issue697.aya.txt
In file $FILE:17:65 ->

  15 | def idp {a : A} : a = a => \i => a
  16 | 
  17 | def sym {A : Type} {a b : A} (p : a = b) : b = a => hcomp2d (idp a) idp p
                                                                        ^^

Error: Cannot check the expression
         a
       of type
         A
       against the type
         I

In file $FILE:17:65 ->

  15 | def idp {a : A} : a = a => \i => a
  16 | 
  17 | def sym {A : Type} {a b : A} (p : a = b) : b = a => hcomp2d (idp a) idp p
                                                                        ^^

Error: Unsolved meta a'
       in `idp {[| i |] A {| ~ i := a | i := a |}} {a'}`
       in `idp {[| i |] A {| ~ i := a | i := a |}} {a'} <a>`
       in `hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i := a |}} {a'}
        <a>) (\ i => idp {A} {a} i) (\ i => p i)`
       in `hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i := a |}} {a'}
        <a>) (\ i => idp {A} {a} i) (\ i => p i) i`
       in `\ i => hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i :=
        a |}} {a'} <a>) (\ i => idp {A} {a} i) (\ i => p i) i`

In file $FILE:17:65 ->

  15 | def idp {a : A} : a = a => \i => a
  16 | 
  17 | def sym {A : Type} {a b : A} (p : a = b) : b = a => hcomp2d (idp a) idp p
                                                                        ^^

Error: Unsolved meta a'
       in `idp {[| i |] A {| ~ i := a | i := a |}} {a'} <a>`
       in `hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i := a |}} {a'}
        <a>) (\ i => idp {A} {a} i) (\ i => p i)`
       in `hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i := a |}} {a'}
        <a>) (\ i => idp {A} {a} i) (\ i => p i) i`
       in `\ i => hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i :=
        a |}} {a'} <a>) (\ i => idp {A} {a} i) (\ i => p i) i`

In file $FILE:17:65 ->

  15 | def idp {a : A} : a = a => \i => a
  16 | 
  17 | def sym {A : Type} {a b : A} (p : a = b) : b = a => hcomp2d (idp a) idp p
                                                                        ^^

Error: Unsolved meta a'
       in `idp {[| i |] A {| ~ i := a | i := a |}} {a'} <a>`
       in `hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i := a |}} {a'}
        <a>) (\ i => idp {A} {a} i) (\ i => p i)`
       in `hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i := a |}} {a'}
        <a>) (\ i => idp {A} {a} i) (\ i => p i) i`
       in `\ i => hcomp2d {A} {a} {a} {b} {a} (idp {[| i |] A {| ~ i := a | i :=
        a |}} {a'} <a>) (\ i => idp {A} {a} i) (\ i => p i) i`

4 error(s), 0 warning(s).
What are you doing?
